[project]
name = "gha-runner"
version = "0.0.1.dev0"
description = "A GitHub Runner for deploying on cloud backends"
authors = [
    { name = "Ethan Holz", email = "ethan.holz@omsf.io" }
]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "boto3",
]

[build-system]
# We are not going to add versioningit at this time
requires = ["setuptools >= 61.2"]
build-backend = "setuptools.build_meta"


